# Minecraft-with-friends

./: .dockerignore  .gitignore  CLAUDE.md  PLAN.md  pom.xml
mythic-cord/: .gitignore  Cargo.toml  LICENSE  README.md  VENDOR.md  rust-toolchain.toml
mythic-cord/infrarust/: .dockerignore  .gitignore  ACKNOWLEDGEMENT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md
mythic-cord/infrarust/.cargo/: config.toml
mythic-cord/infrarust/crates/infrarust/: Cargo.toml
mythic-cord/infrarust/crates/infrarust-api/: Cargo.toml
mythic-cord/infrarust/crates/infrarust-api/src/: command.rs  error.rs  lib.rs  loader.rs  message.rs  permissions.rs  player.rs  plugin.rs  prelude.rs  provider.rs
mythic-cord/infrarust/crates/infrarust-core/: Cargo.toml  build.rs
mythic-cord/infrarust/crates/infrarust-core/src/: error.rs  lib.rs  registry.rs  server.rs
mythic-cord/infrarust/crates/infrarust-core/tests/: ban_file_storage.rs  ban_manager.rs  ban_middleware.rs  ban_types.rs  domain_router_dynamic.rs  event_bus.rs  event_bus_priority.rs  event_conversion.rs  pipeline.rs  player_session.rs  plugin_context.rs  plugin_dependency.rs  plugin_integration.rs  plugin_manager.rs  provider_docker.rs  provider_file.rs  provider_id.rs  scheduler.rs  telemetry_metrics.rs  telemetry_middleware.rs  telemetry_sampler.rs
mythic-cord/infrarust/crates/infrarust-transport/: Cargo.toml
mythic-cord/infrarust/crates/infrarust-transport/src/: backend.rs  connection.rs  error.rs  forward.rs  lib.rs  listener.rs  proxy_protocol.rs  socket.rs
mythic-cord/infrarust/crates/infrarust-transport/tests/: backend.rs  connection.rs  forward.rs  listener.rs  proxy_protocol.rs  socket.rs
mythic-cord/infrarust/crates/infrarust/src/: main.rs  migrate.rs  plugins.rs  wizard.rs
mythic-cord/infrarust/crates/infrarust_config/: Cargo.toml
mythic-cord/infrarust/crates/infrarust_config/src/: defaults.rs  domain.rs  error.rs  lib.rs  provider.rs  proxy.rs  server.rs  validation.rs
mythic-cord/infrarust/crates/infrarust_config/tests/: domain_index.rs  ip_filter.rs  parse_proxy.rs  parse_server.rs  plugin_config.rs  server_address.rs  telemetry_config.rs  validation.rs
mythic-cord/infrarust/crates/infrarust_protocol/: Cargo.toml  LICENSE-MIT
mythic-cord/infrarust/crates/infrarust_protocol/src/: chunk.rs  error.rs  lib.rs  nbt.rs  nbt_text.rs  nbt_util.rs  prelude.rs  version.rs
mythic-cord/infrarust/crates/infrarust_server_manager/: Cargo.toml
mythic-cord/infrarust/crates/infrarust_server_manager/src/: crafty.rs  error.rs  lib.rs  local.rs  monitor.rs  provider.rs  pterodactyl.rs  service.rs  state.rs
mythic-cord/infrarust/crates/infrarust_server_manager/tests/: crafty.rs  local.rs  pterodactyl.rs  service.rs  state.rs
mythic-cord/infrarust/docs/v1/: .gitignore  index.md  package.json
mythic-cord/infrarust/docs/v1/.vitepress/: config.mts
mythic-cord/infrarust/docs/v1/features/: ban-system.md  caching.md  crafty-controller.md  docker.md  pterodactyl.md  rate-limiting.md  telemetry.md
mythic-cord/infrarust/docs/v1/fr/: contributing.md  index.md
mythic-cord/infrarust/docs/v1/proxy/: index.md
mythic-cord/infrarust/docs/v1/quickstart/: configuration.md  index.md  installation.md
mythic-cord/infrarust/docs/v1/roadmap/: dashboard.md  index.md  plugins.md
mythic-cord/infrarust/docs/v2/: index.md  license.md  package-lock.json  package.json  thank-you-open-source.md
mythic-cord/infrarust/docs/v2/.vitepress/: config.mts
mythic-cord/infrarust/docs/v2/configuration/: config-reference.md  global.md  index.md  proxy-forwarding.md  servers.md
mythic-cord/infrarust/docs/v2/guide/: common-issues.md  docker-compose.md  docker.md  faq.md  how-it-works.md  index.md  installation.md  load-balancer.md  proxy-modes.md  quick-start.md  routing.md  systemd.md
mythic-cord/infrarust/docs/v2/plugins/: index.md
mythic-cord/infrarust/docs/v2/reference/: cli.md  error-codes.md  index.md  proxy-protocol.md
mythic-cord/infrarust/examples/: infrarust.toml
mythic-cord/infrarust/examples/servers/: 1.2.5.toml  1.4.5.toml  1.6.4.toml  latest.toml
mythic-cord/infrarust/plugins/: .gitignore
mythic-cord/infrarust/plugins/infrarust-plugin-admin-api/: Cargo.toml  build.rs
mythic-cord/infrarust/plugins/infrarust-plugin-admin-api/frontend/: nuxt.config.ts  package.json
mythic-cord/infrarust/plugins/infrarust-plugin-admin-api/src/: api_provider.rs  auth.rs  config.rs  error.rs  frontend.rs  health_cache.rs  health_checker.rs  lib.rs  log_layer.rs  rate_limit.rs  response.rs  router.rs  server_store.rs  state.rs  util.rs
mythic-cord/infrarust/plugins/infrarust-plugin-antibot/: Cargo.toml
mythic-cord/infrarust/plugins/infrarust-plugin-antibot/src/: lib.rs
mythic-cord/infrarust/plugins/infrarust-plugin-auth/: Cargo.toml
mythic-cord/infrarust/plugins/infrarust-plugin-auth/src/: account.rs  config.rs  error.rs  handler.rs  ip_mask.rs  lib.rs  password.rs  (+1 more)
mythic-cord/infrarust/plugins/infrarust-plugin-hello/: Cargo.toml
mythic-cord/infrarust/plugins/infrarust-plugin-queue/: Cargo.toml
mythic-cord/infrarust/plugins/infrarust-plugin-server-wake/: Cargo.toml
mythic-cord/infrarust/plugins/server_wake/: config.toml
mythic-cord/infrarust/tools/infrarust-motd/: Cargo.toml
mythic-cord/infrarust/tools/registry-extractor/: .gitignore  Cargo.toml  extract-all.sh
mythic-cord/infrarust/tools/stress-test/: Cargo.toml  README.md
mythic-cord/plugin-routing/: Cargo.toml
mythic-cord/plugin-routing/src/: heartbeat.rs  integration.rs  lib.rs  registry_view.rs  router.rs
mythic-cord/proxy/: Cargo.toml
mythic-cord/proxy/src/: admin.rs  config.rs  config_export.rs  main.rs  state.rs
mythic-cord/pterodactyl/: README.md  egg-mythiccord.json
mythic-cord/stdb/: Cargo.toml
mythic-cord/stdb-bridge/: Cargo.toml
mythic-cord/stdb-bridge/src/: client.rs  driver.rs  handle.rs  lib.rs  schema.rs
mythic-cord/stdb/src/: common.rs  cosmetics.rs  economy.rs  events.rs  gameplay.rs  lib.rs  players.rs  punishments.rs  ranks.rs  registry.rs  sessions.rs  social.rs
mythic-cord/tools/: vendor-infrarust.ps1  vendor-infrarust.sh
(+3304 files in other folders)
