[workspace]
resolver = "2"
members = [
    "crates/infrarust_protocol",
    "crates/infrarust-api",
    "crates/infrarust_config",
    "crates/infrarust-core",
    "crates/infrarust_server_manager",
    "crates/infrarust-transport",
    "crates/infrarust",
    "plugins/infrarust-plugin-auth",
    "plugins/infrarust-plugin-hello",
    "plugins/infrarust-plugin-server-wake",
    "plugins/infrarust-plugin-admin-api",
    "tools/infrarust-motd",
    "tools/registry-extractor",
    "tools/stress-test",
]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.51.0", features = ["net", "io-util", "io-std", "sync", "time", "macros", "rt", "rt-multi-thread", "signal", "process", "fs"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1.18"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yml = "0.0.12"
toml = "0.9.8"
fastnbt = "2.6.1"

# Data types
bytes = "1.11.1"
uuid = { version = "1.23.0", features = ["v3", "v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
humantime = "2.3.0"
humantime-serde = "1.1.1"
ipnet = { version = "2.12.0", features = ["serde"] }

# Error handling
thiserror = "2.0.18"
anyhow = "1.0.102"

# Logging / Tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "registry"] }

# Telemetry (OpenTelemetry)
opentelemetry = { version = "0.31.0" }
opentelemetry_sdk = { version = "0.31.0" }
opentelemetry-otlp = { version = "0.31.1", features = ["grpc-tonic", "http-proto"] }
tracing-opentelemetry = { version = "0.32.1" }

# CLI
clap = { version = "4.6.0", features = ["derive"] }
comfy-table = { version = "7.2.2", features = ["tty"] }
console = "0.16.3"
dialoguer = "0.12.0"
minus = { version = "5.6.1", features = ["static_output"] }

# Networking
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls", "json"] }
socket2 = { version = "0.5.10", features = ["all"] }
ppp = "2.3.0"

# Concurrency / State
arc-swap = "1.9.1"
dashmap = "6.1.0"
governor = "0.10.4"
nonzero_ext = "0.3.0"
notify = "8.2.0"
futures-util = "0.3.32"
async-stream = "0.3.6"

# Compression
flate2 = "1.1.9"
libdeflater = "1.25.2"

# Crypto (protocol)
aes = "0.8.4"
cfb8 = "0.8.1"
cipher = "0.4.4"
rsa = { version = "0.9.10", features = ["sha1"] }
sha1 = "0.11.0"
sha2 = "0.10.9"
hmac = "0.12.1"
rand = "0.8"
num-bigint = "0.4.6"
base64 = "0.22.1"

# Crypto (auth plugin)
argon2 = { version = "0.5.3", features = ["std"] }
password-hash = "0.6.0"
bcrypt = "0.19.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }

# Web (admin API)
axum = "0.8.8"
tower = { version = "0.5.3", features = ["limit"] }
tower-http = { version = "0.6.8", features = ["cors", "compression-gzip", "trace", "timeout"] }
subtle = "2.6.1"
time = { version = "0.3.47", features = ["formatting", "macros"] }
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
mime_guess = "2.0.5"
http-body-util = "0.1.3"

# Docker
bollard = "0.18.1"

# Pattern matching
wildmatch = "2.6.1"

# Platform-specific
nix = { version = "0.29", features = ["fs", "net", "zerocopy"] }
mimalloc = "0.1.48"

# Testing
tempfile = "3.27.0"

# Internal crates
infrarust_protocol = { path = "crates/infrarust_protocol", version = "2.0.0-alpha.4" }
infrarust-api = { path = "crates/infrarust-api", version = "2.0.0-alpha.4" }
infrarust_config = { path = "crates/infrarust_config", version = "2.0.0-alpha.4" }
infrarust-transport = { path = "crates/infrarust-transport", version = "2.0.0-alpha.4" }
infrarust-core = { path = "crates/infrarust-core", version = "2.0.0-alpha.4" }
infrarust_server_manager = { path = "crates/infrarust_server_manager", version = "2.0.0-alpha.4" }

# Internal plugins
infrarust-plugin-auth = { path = "plugins/infrarust-plugin-auth", version = "2.0.0-alpha.4" }
infrarust-plugin-hello = { path = "plugins/infrarust-plugin-hello", version = "2.0.0-alpha.4" }
infrarust-plugin-server-wake = { path = "plugins/infrarust-plugin-server-wake", version = "2.0.0-alpha.4" }
infrarust-plugin-admin-api = { path = "plugins/infrarust-plugin-admin-api", version = "2.0.0-alpha.4" }

[workspace.lints.clippy]
all = "warn"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.package]
version = "2.0.0-alpha.6"
edition = "2024"
rust-version = "1.94"
license-file = "LICENSE"
repository = "https://github.com/Shadowner/Infrarust"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "unwind"