[package]
name = "mythiccord"
description = "MythicCord proxy — Infrarust fork wired to mythic-stdb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "mythiccord"
path = "src/main.rs"

[dependencies]
mythiccord-stdb-bridge = { path = "../stdb-bridge" }
mythiccord-plugin-routing = { path = "../plugin-routing" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server"] }
http-body-util = "0.1"

# Vendored Infrarust binary — only included with the feature, but cargo
# resolves `path = ...` even for optional deps, so we keep this block
# commented until `tools/vendor-infrarust.{sh,ps1}` runs.
#
# >>> BEGIN VENDOR-MANAGED BLOCK
# infrarust = { path = "../infrarust/crates/infrarust", optional = true }
# >>> END VENDOR-MANAGED BLOCK

[features]
default = []
with-infrarust = [
    "mythiccord-plugin-routing/with-infrarust",
]

[lints]
workspace = true
