[package]
name = "mythiccord"
description = "MythicCord sidecar — STDB-driven config exporter for an Infrarust proxy process"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "mythiccord"
path = "src/main.rs"

[features]
default = []
with-infrarust = []

[dependencies]
mythiccord-stdb-bridge = { path = "../stdb-bridge" }
mythiccord-plugin-routing = { path = "../plugin-routing" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server"] }
http-body-util = "0.1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
