[package]
name = "infrarust_config"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
description = "Configuration management for Infrarust, a Minecraft proxy server written in Rust."

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
ipnet = { workspace = true }
humantime = { workspace = true }
humantime-serde = { workspace = true }
wildmatch = { workspace = true }
serde_yml = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
