[package]
name = "infrarust_server_manager"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
description = "Server management for Infrarust, a Minecraft proxy server written in Rust."
[lints]
workspace = true

[dependencies]
infrarust_config = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
dashmap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = { workspace = true }
