[package]
name = "infrarust-plugin-admin-api"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
description = "HTTP REST API plugin for Infrarust proxy administration"

[lints]
workspace = true

[dependencies]
infrarust-api = { workspace = true }
infrarust_protocol = { workspace = true }

axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-stream = { workspace = true }
tokio-stream = { workspace = true }
subtle = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
http-body-util = { workspace = true }
tower = { workspace = true, features = ["util"] }
