[package]
name = "infrarust-plugin-auth"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
infrarust-api = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
argon2 = { workspace = true }
password-hash = { workspace = true }
bcrypt = { workspace = true }
rand_core = { workspace = true }
reqwest = { workspace = true }
governor = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
