[package]
name = "infrarust-plugin-server-wake"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
infrarust-api = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
