[package]
name = "infrarust-motd"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "infrarust-motd"
path = "src/main.rs"

[dependencies]
infrarust_protocol = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
