[package]
name = "registry-extractor"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "registry-extractor"
path = "src/main.rs"

[dependencies]
infrarust_protocol = { workspace = true }
infrarust-core = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
